# aliases

./: .gitignore  .readthedocs.yml  LICENSE  README.md  README.rst  pyproject.toml  requirements-dev.txt
.github/workflows/: python-publish.yml
docs/source/: conf.py  getting_started.rst  index.rst  installation.rst
docs/source/reference/: dict.rst  pandas.rst  polars.rst  processor.rst  space.rst  string.rst  string_function.rst  toc.rst
src/: temp.py
src/aliases/: __init__.py  dict.py  pandas_accessor.py  polars_accessor.py  processor.py  space.py  string.py  string_function.py  third_party_classes.py
