[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aliases"
description = "Keeping track of aliases"
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Koen Baak", email = "koenbaak@gmail.com" },
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/KoenBaak/aliases"

[project.optional-dependencies]
test = []
doc = []

[tool.hatch.version]
path = "src/aliases/__init__.py"
